feat: implemented searched repository list

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,9 @@
 .header {
   display: flex;
-  align-items: center;
   gap: 1rem;
+  justify-content: space-between;
+
+  &__search {
+    width: 100%;
+  }
 }
