--- a/src/components/ RepositoryList/RepositoryList.scss
+++ b/src/components/ RepositoryList/RepositoryList.scss
@@ -1,5 +1,31 @@
+@import "../../styleutils/variables.scss";
+
 .repository {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  position: absolute;
+  width: 96.8%;
+
+  z-index: 100;
+
+  padding: 1rem;
+  max-height: 240px;
+
+  overflow: auto;
+
+  border: 1px solid $main-border-color;
+  border-radius: 1rem;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+
+  &__item {
+    padding: 1rem;
+    cursor: pointer;
+    transition: all .1s ease-in;
+
+    &:hover {
+      background: $hover-color;
+      border-radius: 1rem;
+    }
+  }
 }
