feat: added base kanban dashboard

--- a/src/components/ RepositoryList/RepositoryList.scss
+++ b/src/components/ RepositoryList/RepositoryList.scss
@@ -13,6 +13,7 @@
 
   overflow: auto;
 
+  background-color: $main-background;
   border: 1px solid $main-border-color;
   border-radius: 1rem;
   border-top-left-radius: 0;
