--- a/src/components/IssueStateColumn/IssueStateColumn.scss
+++ b/src/components/IssueStateColumn/IssueStateColumn.scss
@@ -1,8 +1,9 @@
 @import "../../styleutils/variables.scss";
 
 .issue-state {
-  height: 80vh;
-  width: 25%;
+  height: 100%;
+  width: 27%;
+  max-height: 80vh;
 
   border: 1px solid $main-border-color;
   border-radius: 1rem;
@@ -17,5 +18,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    max-height: 70vh;
+    overflow-y: auto;
   }
 }
