--- a/src/components/IssueCard/IssueCard.scss
+++ b/src/components/IssueCard/IssueCard.scss
@@ -10,6 +10,8 @@
   padding: 1rem;
   margin: 0.5rem;
 
+  background: $main-background;
+
   &__wrap {
     display: flex;
     align-items: center;
