--- a/src/components/KanbanDashboard/KanbanDashboard.scss
+++ b/src/components/KanbanDashboard/KanbanDashboard.scss
@@ -1,4 +1,31 @@
+@import "../../styleutils/variables.scss";
+
 .dashboard {
   display: flex;
   justify-content: space-between;
+  overflow: auto;
+
+  &__issue-state {
+    height: 80vh;
+    width: 27%;
+    max-height: 80vh;
+  
+    border: 1px solid $main-border-color;
+    border-radius: 1rem;
+  
+    margin-block: 3rem;
+  
+  }
+
+  &__title {
+    text-align: center;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-height: 70vh;
+    overflow-y: auto;
+  }
 }
